[package]
name = "saver"
version = "0.2.0"
edition = "2021"
authors = ["Dock.io"]
license = "Apache-2.0"
description = "SAVER SNARK-friendly, Additively-homomorphic, and Verifiable Encryption and decryption with Rerandomization"
repository = "https://github.com/docknetwork/crypto"

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
digest = "0.9"
rayon = { version = "1", optional = true }
dock_crypto_utils = { default-features = false, path = "../utils" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }

[dependencies.legogroth16]
git = "https://github.com/lovesh/legogro16"
#branch = "comm-wit"
rev = '5bc5e4af466c1bb84a636e18002dcffeeb0d1899'
default-features = false

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
serde_json = "1.0"
proof_system = { default-features = false, path = "../proof_system" }
bbs_plus = { default-features = false, path = "../bbs_plus" }

[features]
default = [ "parallel" ]
#std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "ark-groth16/std", "legogroth16/std", "ark-r1cs-std/std", "ark-relations/std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "ark-groth16/std", "ark-r1cs-std/std", "ark-relations/std"]
print-trace = [ "ark-std/print-trace" ]
#parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-groth16/parallel", "legogroth16/parallel", "rayon", "ark-r1cs-std/parallel" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-groth16/parallel", "rayon", "ark-r1cs-std/parallel" ]
