[package]
name = "saver"
version = "0.17.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SAVER SNARK-friendly, Additively-homomorphic, and Verifiable Encryption and decryption with Rerandomization"

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-r1cs-std.workspace = true
ark-relations.workspace = true
ark-groth16.workspace = true
digest.workspace = true
rayon = {workspace = true, optional = true}
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
dock_crypto_utils = { version = "0.19.0", default-features = false, path = "../utils" }
legogroth16 = { version = "0.14.0", default-features = false, features = ["aggregation"], path = "../legogroth16" }
merlin = { package = "dock_merlin", version = "3.0.0", default-features = false, path = "../merlin" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
serde_json = "1.0"
rmp-serde = "1.0"
proof_system = { path = "../proof_system" }
bbs_plus = { path = "../bbs_plus" }

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "ark-groth16/std", "legogroth16/std", "ark-r1cs-std/std", "ark-relations/std", "merlin/std"]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-groth16/parallel", "rayon", "ark-r1cs-std/parallel", "legogroth16/parallel" ]
