[package]
name = "schnorr_pok"
version = "0.5.0"
edition = "2021"
authors = ["Dock.io"]
license = "Apache-2.0"
description = "Schnorr protocol for proof of knowledge of one or more discrete logs"
repository = "https://github.com/docknetwork/crypto"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
rayon = { version = "1", optional = true }
digest = "0.9"
dock_crypto_utils = { version = "0.4.0", default-features = false, path = "../utils" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
serde_json = "1.0"

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "serde/std"]
print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel" ]
#with-serde = ["serde", "serde_with", "dock_crypto_utils/with-serde"]