[package]
name = "secret_sharing_and_dkg"
version = "0.12.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Secret sharing schemes like Shamir's, Feldman's, Pedersen's and Publicly Verifiable Secret Sharing scheme and DKGs like Gennaro's and FROST's"
keywords = ["secret-sharing", "VSS", "PVSS", "DKG", "Shamir"]

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
digest.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
dock_crypto_utils = { version = "0.19.0", default-features = false, path = "../utils" }
schnorr_pok = { version = "0.19.0", default-features = false, path = "../schnorr_pok" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
serde_json = "1.0"
rmp-serde = "1.0"
test_utils = { path = "../test_utils" }

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "serde/std", "dock_crypto_utils/std", "ark-poly/std", "schnorr_pok/std"]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel", "ark-poly/parallel", "schnorr_pok/parallel"]