[package]
name = "smc_range_proof"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Range proofs based on set-membership check and sumsets"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
digest.workspace = true
zeroize.workspace = true
dock_crypto_utils = { version = "0.16.0", default-features = false, path = "../utils" }
rayon = {workspace = true, optional = true}

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
schnorr_pok = { version = "0.15.0", default-features = false, path = "../schnorr_pok" }

[features]
default = [ "parallel"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std"]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel"]