[package]
name = "smc_range_proof"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Range proofs based on set-membership check and sumsets"
keywords = ["set-membership-proof", "range-proof"]

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
digest.workspace = true
zeroize.workspace = true
rayon = {workspace = true, optional = true}
dock_crypto_utils = { version = "0.19.0", default-features = false, path = "../utils" }
short_group_sig = { version = "0.3.0", default-features = false, path = "../short_group_sig" }
schnorr_pok = { version = "0.19.0", default-features = false, path = "../schnorr_pok" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true

[features]
default = [ "parallel"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "short_group_sig/std", "schnorr_pok/std"]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel", "short_group_sig/parallel", "schnorr_pok/parallel"]