[package]
name = "syra"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SyRA: Sybil-Resilient Anonymous Signatures with Applications to Decentralized Identity"
keywords = ["Dodis-Yampolskiy-VRF", "sybil-resistance", "pseudonym", "threshold-sig"]

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
digest.workspace = true
rayon = {workspace = true, optional = true}
serde = { workspace = true, optional = true, default-features = false, features = ["derive"] }
serde_with = { workspace = true, optional = true }
cfg_eval.workspace = true
zeroize.workspace = true
dock_crypto_utils = { version = "0.23.0", default-features = false, path = "../utils" }
schnorr_pok = { version = "0.23.0", default-features = false, path = "../schnorr_pok" }
short_group_sig = { version = "0.7.0", default-features = false, path = "../short_group_sig" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
secret_sharing_and_dkg = { path = "../secret_sharing_and_dkg" }
test_utils = { path = "../test_utils" }
sha3.workspace = true

[features]
default = [ "parallel", "serde" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "schnorr_pok/std", "short_group_sig/std"]
print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel", "schnorr_pok/parallel", "short_group_sig/parallel" ]
serde = [
    "dep:serde",
    "serde_with",
    "dock_crypto_utils/serde",
    "schnorr_pok/serde",
    "short_group_sig/serde",
]