[package]
name = "test_utils"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bbs_plus = { default-features = false, path = "../bbs_plus" }
schnorr_pok = { default-features = false, path = "../schnorr_pok" }
vb_accumulator = { default-features = false, path = "../vb_accumulator" }
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
ark-serialize.workspace = true
blake2.workspace = true
proof_system = { default-features = false, path = "../proof_system"}
kvac = { default-features = false, path = "../kvac"}

[features]
default = ["parallel"]
parallel = ["proof_system/default"]
wasmer-js = ["proof_system/wasmer-js"]
wasmer-sys = ["proof_system/wasmer-sys"]