[package]
name = "dock_crypto_utils"
version = "0.14.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common code for Dock's crypto libraries"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
zeroize.workspace = true
digest.workspace = true
serde.workspace = true
serde_with.workspace = true
rayon = {workspace = true, optional = true}
merlin = { package = "dock_merlin", version = "2.0", default-features = false, path = "../merlin" }
itertools.workspace = true
num = { version = "0.4.1", default-features = false }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "serde/std", "ark-poly/std", "merlin/std", "num/std"]
print-trace = ["ark-std/print-trace"]
parallel = ["std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon"]
#with-serde = ["serde", "serde_with"]