[package]
name = "vb_accumulator"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Positive and universal bilinear map accumulator and proof of membership and non-membership protocol"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = {version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
digest = "0.9"
rayon = { version = "1", optional = true }
schnorr_pok = { version = "0.7.0", default-features = false, path = "../schnorr_pok" }
dock_crypto_utils = { version = "0.6.0", default-features = false, path = "../utils" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.5.5", features = ["derive"] }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
serde_json = "1.0"

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "schnorr_pok/std", "dock_crypto_utils/std", "serde/std"]
print-trace = [ "ark-std/print-trace", "schnorr_pok/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon", "schnorr_pok/parallel", "dock_crypto_utils/parallel" ]