[package]
name = "vb_accumulator"
version = "0.28.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Positive and universal bilinear map accumulator and proof of membership and non-membership protocol"
keywords = ["accumulator", "VB-accumulator", "KB-accumulator"]

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-poly.workspace = true
digest.workspace = true
rayon = {workspace = true, optional = true}
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
schnorr_pok = { version = "0.22.0", default-features = false, path = "../schnorr_pok" }
dock_crypto_utils = { version = "0.22.0", default-features = false, path = "../utils" }
short_group_sig = { version = "0.6.0", default-features = false, path = "../short_group_sig" }
kvac = { version = "0.7.0", default-features = false, path = "../kvac" }
oblivious_transfer_protocols = { version = "0.11.0", default-features = false, path = "../oblivious_transfer" }
secret_sharing_and_dkg = { version = "0.15.0", default-features = false, path = "../secret_sharing_and_dkg" }

[dev-dependencies]
blake2.workspace = true
ark-bls12-381.workspace = true
serde_json = "1.0"
rmp-serde = "1.0"
test_utils = { path = "../test_utils" }
ark-secp256r1.workspace = true
sha2 = {version = "0.10.8", default-features = false}
sha3.workspace = true

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "schnorr_pok/std", "dock_crypto_utils/std", "serde/std", "short_group_sig/std", "kvac/std", "oblivious_transfer_protocols/std", "secret_sharing_and_dkg/std"]
print-trace = [ "ark-std/print-trace", "schnorr_pok/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon", "schnorr_pok/parallel", "dock_crypto_utils/parallel", "short_group_sig/parallel", "kvac/parallel", "oblivious_transfer_protocols/parallel", "secret_sharing_and_dkg/parallel"]