[package]
name = "verifiable_encryption"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
digest.workspace = true
rayon = {workspace = true, optional = true}
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
dock_crypto_utils = { version = "0.20.0", default-features = false, path = "../utils" }
itertools.workspace = true
secret_sharing_and_dkg = { version = "0.13.0", default-features = false, path = "../secret_sharing_and_dkg" }

[dev-dependencies]
blake2.workspace = true
sha3 = { version = "0.10.6", default-features = false }
ark-bls12-381.workspace = true
ark-secp256r1 = { version = "^0.4.0", default-features = false }

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "serde/std"]
print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel" ]