[package]
name = "verifiable_encryption"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Verifiable encryption schemes - Encryption of discrete log from DKG-in-the-head"
keywords = ["verifiable-encrypt", "DKG-in-the-head"]

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
digest.workspace = true
rayon = {workspace = true, optional = true}
zeroize.workspace = true
itertools.workspace = true
dock_crypto_utils = { version = "0.23.0", default-features = false, path = "../utils" }
secret_sharing_and_dkg = { version = "0.16.0", default-features = false, path = "../secret_sharing_and_dkg" }

[dev-dependencies]
blake2.workspace = true
sha3.workspace = true
ark-bls12-381.workspace = true
ark-secp256r1.workspace = true

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "secret_sharing_and_dkg/std"]
print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel", "secret_sharing_and_dkg/parallel" ]